Ajout des informations de contacts dans la page de FAQ

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -30,4 +30,19 @@
             {% set compteur = compteur + 1 %}
         {% endfor %}
     </div>
+
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Informations de Contact</h2>
+        <p class="text-center">Pour toute question ou assistance supplémentaire, n'hésitez pas à nous contacter :</p>
+        <div class="list text-center">
+            <span class="material-symbols-outlined">call</span>
+            <div>
+                <strong>Numéro de téléphone :</strong> <a href="tel:+33101010101">+33 1 01 01 01 01</a>
+            </div>
+            <span class="material-symbols-outlined">mail</span>
+            <div>
+                <strong>Email :</strong> <a href="mailto:contact@exemple.com">contact@exemple.com</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
