Correction du bug lors de l'annulation quand le médecin clique sur supprimer et ensuite annuler, modification des couleurs des boutons

--- a/templates/health_professional/calendar.html.twig
+++ b/templates/health_professional/calendar.html.twig
@@ -40,11 +40,12 @@
                     showCancelButton: true,
                     showDenyButton: true,
                     confirmButtonText: 'Modifier',
-                    cancelButtonText: 'Ok',
+                    cancelButtonText: 'OK',
+                    confirmButtonColor: '#A9A9A9',
+                    cancelButtonColor: '#3085d6',
                     denyButtonText: 'Supprimer',
-                    reverseButtons: true
                 }).then((result) => {
-                    if (result.isConirmed) {
+                    if (result.isConfirmed) {
                         window.location.href = '{{ path('app_consultation_update', {id: 'consultation_id'}) }}'.replace('consultation_id', info.event.id);
                     } else if (result.isDenied) {
                         Swal.fire({
@@ -57,7 +58,7 @@
                             confirmButtonText: 'Oui, supprimer',
                             cancelButtonText: 'Annuler'
                         }).then((deleteResult) => {
-                            if (deleteResult.isDismissed) {
+                            if (deleteResult.isConfirmed) {
                                 window.location.href = '{{ path('app_consultation_delete', {id: 'consultation_id'}) }}'.replace('consultation_id', info.event.id);
                             }
                         });
