--- a/templates/patient/_consultation.html.twig
+++ b/templates/patient/_consultation.html.twig
@@ -4,7 +4,9 @@
         <th>Heure de Début</th>
         <th>Heure de Fin</th>
         <th>Praticien</th>
-        <th>Actions</th>
+        {% if type == 'future' %}
+            <th>Actions</th>
+        {% endif %}
     </tr>
     {% if appointments is not empty %}
         {% for appointment in appointments %}
@@ -27,10 +29,12 @@
                     {% endfor %}
                     {{ healthprofessionalArray|join(', ') }}
                 </td>
-                <td>
-                    <a href="{{ path('app_consultation_update', {id: appointment.id}) }}" class="text-primary" title="Modifier"><span class="material-symbols-outlined">edit</span></a>
-                    <a href="{{ path('app_consultation_delete', {id: appointment.id}) }}" class="text-danger" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette consultation ?')"><span class="material-symbols-outlined">delete</span></a>
-                </td>
+                {% if appointment.date > date() %}
+                    <td>
+                        <a href="{{ path('app_consultation_update', {id: appointment.id}) }}" class="text-primary" title="Modifier"><span class="material-symbols-outlined">edit</span></a>
+                        <a href="{{ path('app_consultation_delete', {id: appointment.id}) }}" class="text-danger" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette consultation ?')"><span class="material-symbols-outlined">delete</span></a>
+                    </td>
+                {% endif %}
             </tr>
         {% endfor %}
     {% else %}
