--- a/templates/patient/consultation.html.twig
+++ b/templates/patient/consultation.html.twig
@@ -6,6 +6,11 @@
 
 {% block body %}
     <div class="container mt-5">
+        <a href="{{ path('app_consultation_create') }}"
+           class="btn btn-outline-danger mb-3">
+            Ajouter une nouvelle consultation
+        </a>
+
         <div class="row">
             <div class="col-lg-6 col-12 mb-4">
                 <div class="card shadow p-4">
