Ajout des boutons vers les disponibilités et la réservation de matériel (non implémenté) dans la page de calendrier

--- a/templates/health_professional/calendar.html.twig
+++ b/templates/health_professional/calendar.html.twig
@@ -76,6 +76,12 @@
                 <a href="{{ path('app_consultation_create') }}" class="btn btn-outline-danger mb-3 w-100">
                     Ajouter une nouvelle consultation
                 </a>
+                <a href="{{ path('app_availability_show') }}" class="btn btn-outline-danger mb-3 w-100">
+                    Voir mes disponibilités
+                </a>
+                <a href="#" class="btn btn-outline-danger mb-3 w-100">
+                    Réserver du matériel
+                </a>
             </div>
             <div id="calendar"></div>
         </div>
