--- a/templates/_card.html.twig
+++ b/templates/_card.html.twig
@@ -1,9 +1,7 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card p-4 text-start shadow">
-                {% block content %}{% endblock %}
-            </div>
+        <div class="card shadow p-4 col-md-6">
+            {% block content %}{% endblock %}
         </div>
     </div>
 </div>
