--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,97 +7,95 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="card shadow p-4 col-md-6 mb-4">
-                <h2 class="mb-4 text-center">Inscrivez-vous</h2>
 
-                {{ form_errors(registrationForm) }}
+    {% embed '_card.html.twig' %}
+        {% block content %}
+            <h2 class="mb-4 text-center">Inscrivez-vous</h2>
 
-                {{ form_start(registrationForm) }}
+            {{ form_errors(registrationForm) }}
 
-                    {{ form_row(registrationForm.email, {
-                        label: 'Adresse email',
-                        attr: {
-                            placeholder: 'Entrez votre adresse email'
-                        }
-                    }) }}
+            {{ form_start(registrationForm) }}
 
-                    {{ form_row(registrationForm.plainPassword.first, {
-                        label: 'Mot de passe',
-                        attr: {
-                            placeholder: 'Choisissez un mot de passe'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.email, {
+                label: 'Adresse email',
+                attr: {
+                    placeholder: 'Entrez votre adresse email'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.plainPassword.second, {
-                        label: false,
-                        attr: {
-                            placeholder: 'Confirmez votre mot de passe'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.plainPassword.first, {
+                label: 'Mot de passe',
+                attr: {
+                    placeholder: 'Choisissez un mot de passe'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.firstname, {
-                        label: 'Nom',
-                        attr: {
-                            placeholder: 'Entrez votre prénom'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.plainPassword.second, {
+                label: false,
+                attr: {
+                    placeholder: 'Confirmez votre mot de passe'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.lastname, {
-                        label: false,
-                        attr: {
-                            placeholder: 'Entrez votre nom de famille'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.firstname, {
+                label: 'Nom',
+                attr: {
+                    placeholder: 'Entrez votre prénom'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.birthDate, {
-                        label: 'Date de naissance'
-                    }) }}
+            {{ form_row(registrationForm.lastname, {
+                label: false,
+                attr: {
+                    placeholder: 'Entrez votre nom de famille'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.city, {
-                        label: 'Ville',
-                        attr: {
-                            placeholder: 'Entrez votre ville'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.birthDate, {
+                label: 'Date de naissance'
+            }) }}
 
-                    {{ form_row(registrationForm.postCode, {
-                        label: 'Code postal',
-                        attr: {
-                            placeholder: 'Entrez votre code postal'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.city, {
+                label: 'Ville',
+                attr: {
+                    placeholder: 'Entrez votre ville'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.street, {
-                        label: 'Rue',
-                        attr: {
-                            placeholder: 'Entrez votre rue'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.postCode, {
+                label: 'Code postal',
+                attr: {
+                    placeholder: 'Entrez votre code postal'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.gender, {
-                        label: 'Sexe',
-                        placeholder: '--Choisir--'
-                    }) }}
+            {{ form_row(registrationForm.street, {
+                label: 'Rue',
+                attr: {
+                    placeholder: 'Entrez votre rue'
+                }
+            }) }}
 
-                    {{ form_row(registrationForm.phone, {
-                        label: 'Téléphone',
-                        attr: {
-                            placeholder: 'Entrez votre numéro de téléphone'
-                        }
-                    }) }}
+            {{ form_row(registrationForm.gender, {
+                label: 'Sexe',
+                placeholder: '--Choisir--'
+            }) }}
 
-                    {{ form_row(registrationForm.agreeTerms, {
-                        label: 'J\'accepte les conditions générales'
-                    }) }}
+            {{ form_row(registrationForm.phone, {
+                label: 'Téléphone',
+                attr: {
+                    placeholder: 'Entrez votre numéro de téléphone'
+                }
+            }) }}
 
-                    <button type="submit" class="btn btn-lg btn-danger mt-4">Créer le compte</button>
+            {{ form_row(registrationForm.agreeTerms, {
+                label: 'J\'accepte les conditions générales'
+            }) }}
 
-                {{ form_end(registrationForm) }}
+            <button type="submit" class="btn btn-lg btn-danger mt-4">Créer le compte</button>
 
-            </div>
-        </div>
-    </div>
+            {{ form_end(registrationForm) }}
+        {% endblock %}
+    {% endembed %}
 
 {% endblock %}
