--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,25 +15,25 @@
 
         {% block javascripts %}
             {{ importmap() }}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-            <script src="{{ asset('js/chatbot.js') }}"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body class="d-flex flex-column min-vh-100">
 
-    {% if app.user %}
-        {% set home_btn_redirection = path('app_home_user') %}
-    {% else %}
-        {% set home_btn_redirection = path('app_home') %}
-    {% endif %}
 
     <nav class="navbar navbar-expand-lg text-primary font-weight-bold">
         <div class="container-fluid">
-            <a class="navbar-brand text-white h1 fs-1 mt-2" href="{{ home_btn_redirection }}"
-            ><img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime"
-                >HOSPITIME
-                </a>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <a class="navbar-brand text-white h1 fs-1 mt-2" href="{{ path('app_home_user') }}">
+                <img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime">
+                HOSPITIME
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
                     {% block nav_item %}
                         {% if is_granted('ROLE_PATIENT') %}
                             <li>
@@ -56,21 +56,21 @@
                                 <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="">Réserver matériel</a>
                             </li>
                         {% endif %}
+                        {% if app.user %}
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" href="{{ path('app_logout') }}">Se déconnecter</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" href="{{ path('app_login') }}">Se connecter</a>
+                            </li>
+                        {% endif %}
                     {% endblock %}
                 </ul>
-                <ul class="navbar-nav">
-                    {% if app.user %}
-                        <li class="nav-item">
-                            <a class="active btn btn-outline-light me-5" href="{{ path('app_logout') }}">Se déconnecter</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="active btn btn-outline-light me-5" href="{{ path('app_login') }}">Se connecter</a>
-                        </li>
-                    {% endif %}
-                </ul>
             </div>
+        </div>
     </nav>
+
 
     {% block body %}{% endblock %}
     <footer class="bg-dark mt-auto py-3">
