--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,36 +33,36 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
+                <ul class="navbar-nav w-100 d-lg-flex justify-content-between align-items-center flex-lg-row flex-column text-center">
                     {% block nav_item %}
                         {% if is_granted('ROLE_PATIENT') %}
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_user_appointments') }}">Mes rendez-vous</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_user_appointments') }}">Mes rendez-vous</a>
                             </li>
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="#">Prendre un rendez-vous</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="#">Prendre un rendez-vous</a>
                             </li>
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="{{ path('app_faq') }}">Voir la FAQ</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_faq') }}">Voir la FAQ</a>
                             </li>
                         {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_health_professional_calendar') }}">Mes consultations</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_health_professional_calendar') }}">Mes consultations</a>
                             </li>
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="{{ path('app_availability_show', {id: app.user.id}) }}">Voir mes disponibilités</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_availability_show', {id: app.user.id}) }}">Voir mes disponibilités</a>
                             </li>
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="">Réserver matériel</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="">Réserver matériel</a>
                             </li>
                         {% endif %}
                         {% if app.user %}
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" href="{{ path('app_logout') }}">Se déconnecter</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_logout') }}">Se déconnecter</a>
                             </li>
                         {% else %}
-                            <li>
-                                <a class="nav-link active btn btn-outline-light me-5" href="{{ path('app_login') }}">Se connecter</a>
+                            <li class="nav-item">
+                                <a class="nav-link active btn btn-outline-light my-2" href="{{ path('app_login') }}">Se connecter</a>
                             </li>
                         {% endif %}
                     {% endblock %}
