--- a/templates/health_professional/list_patients.html.twig
+++ b/templates/health_professional/list_patients.html.twig
@@ -17,8 +17,7 @@
                 <div class="col-12">
                     <div class="list-group">
                         {% for patient in patients %}
-                            {% set consultation = patient.consultation|last %}
-                            <a href="{{ path('app_display_patient_file', {consultationId: consultation.id}) }}"
+                            <a href="{{ path('app_display_patient_file', {patientId: patient.id}) }}"
                                class="list-group-item list-group-item-action
                                d-md-flex justify-content-between align-items-center">
                                 <div>
