--- a/templates/home/user_home.html.twig
+++ b/templates/home/user_home.html.twig
@@ -19,7 +19,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2>📅 Voir vos {{ consultations|length > 3 ? 3 : consultations|length }} prochaines consultations  :</h2>
+                        {% if consultations|length > 3 ? 3 : consultations|length == 1 %}
+                            <h2>📅 Voir votre prochaine consultation :</h2>
+                        {% else %}
+                            <h2>📅 Voir vos {{ consultations|length > 3 ? 3 : consultations|length }} prochaines consultations  :</h2>
+                        {% endif %}
                         <a class="btn btn-outline-danger btn-sm" href="{{ show_cons_btn_redirection }}">Voir toutes mes prochaines consultations</a>
                     </div>
                     <div class="table-responsive rounded">
