--- a/templates/consultation/_form.html.twig
+++ b/templates/consultation/_form.html.twig
@@ -5,9 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="card shadow p-4 col-md-6 mb-4">
+    {% embed '_card.html.twig' %}
+        {% block content %}
                 {% for label, messages in app.flashes %}
                     {% for message in messages %}
                         <div class="alert alert-danger" role="alert">{{ message }}</div>
@@ -25,7 +24,6 @@
                 {% endif %}
                 <input type="submit" value="{{ submit_label }}" class="btn btn-primary" />
                 {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
+        {% endblock %}
+    {% endembed %}
 {% endblock %}
