--- a/templates/health_professional/calendar.html.twig
+++ b/templates/health_professional/calendar.html.twig
@@ -70,7 +70,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container mt-4">
+    <div class="container mt-5 mb-5">
         <div class="card shadow p-4">
             <div class="d-flex flex-column align-items-start mb-3">
                 <a href="{{ path('app_consultation_create') }}" class="btn btn-outline-danger mb-3 w-100">
