Modification du chemin du bouton 'se connecter'

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,7 +71,7 @@
                             </div>
                         {% else %}
                             <li class="nav-item ms-auto">
-                                <a class="nav-link active btn btn-outline-light mx-1 px-4" href="{{ path('app_login') }}">Se connecter</a>
+                                <a class="nav-link active btn btn-outline-light mx-1 px-4" href="{{ path('app_home_session') }}">Se connecter</a>
                             </li>
                         {% endif %}
                     {% endblock %}
