--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -25,7 +25,9 @@
                     {{ user.gender == 1 ? 'Homme' : (user.gender == 2 ? 'Femme' : 'Genre non spécifié') }}
                 </dd>
             </dl>
-            <a href="{{ path('app_user_update') }}" class="btn btn-primary">Modifier le profil</a>
+            {% if is_granted('ROLE_PATIENT') %}
+                <a href="{{ path('app_user_update') }}" class="btn btn-primary">Modifier le profil</a>
+            {% endif %}
         {% endblock %}
     {% endembed %}
 
